Added better rendering

--- a/DingoBot/Properties/launchSettings.json
+++ b/DingoBot/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "DingoBot": {
-      "commandName": "Project",
-      "commandLineArgs": "-debugRenderer"
+      "commandName": "Project"
     }
   }
 }
